tests/rosetta/out/Smalltalk/compiler-virtual-machine-interpreter.error
parse: error[P001]: /workspace/mochi/tests/rosetta/x/Mochi/compiler-virtual-machine-interpreter.mochi:135:5: unexpected token "if" (expected "{" Statement* "}" (("else" IfStmt) | ("else" "{" Statement* "}"))?)
  --> /workspace/mochi/tests/rosetta/x/Mochi/compiler-virtual-machine-interpreter.mochi:135:5

135 |     if op == "add" {
    |     ^

help:
  Check for a missing `{` or `}` to close the block.